[tool.poetry]
name = "insurance-bot"
version = "1.0.0"
description = "Telegram bot for car insurance"
authors = ["hmaksymm <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.3"
requests = "2.32.3"
google-generativeai = "0.3.2"
python-dotenv = "1.0.0"
databases = {extras = ["sqlite"], version = "0.9.0"}
sqlalchemy = "2.0.27"
mindee = "2.1.1"
aiosqlite = "0.19.0"
aiohttp = "3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 